# Mini-Search-Engine

./: .gitignore  ABOUT_INVERTED_INDEXING.md  CMakeLists.txt  GETTING_STARTED.md  LICENSE  README.md
modules/: CSVParser.cpp  CSVParser.hpp  Comparator.cpp  Comparator.hpp  HashMap.cpp  HashMap.hpp  Normalizer.cpp  Tokenizer.cpp  hashMap.cpp  hashMap.hpp  normalizer.cpp  normalizer.hpp  split.cpp  split.hpp  tokenizer.cpp  tokenizer.hpp
resources/: sample.csv  sample_text.txt
src/: CSVParser.cpp  CSVParser.hpp  QueryParser.cpp  QueryParser.hpp  TableIndexer.cpp  TableIndexer.hpp  TableSearcher.cpp  TableSearcher.hpp  csvParser.cpp  csvParser.hpp  indexer.cpp  indexer.hpp  main.cpp  queryParser.cpp  queryParser.hpp  searcher.cpp  searcher.hpp  tableIndexer.cpp  tableIndexer.hpp  tableSearcher.cpp  tableSearcher.hpp
test/: HashMapTEST.cpp  MySQLTEST.cpp  NormalizerTEST.cpp  Regular_Expressions.md  TokenizerTEST.cpp  hashMapTEST.cpp  normalizerTEST.cpp  searchMariaDBTEST.cpp  searchingMariaDBTEST.cpp  tokenizerTEST.cpp  web_crawler.py
